Fix footer y vista de producto

--- a/AutoClick/Pages/AnunciarMiAuto.cshtml
+++ b/AutoClick/Pages/AnunciarMiAuto.cshtml
@@ -953,40 +953,5 @@
     </div>
 
     <!-- Footer -->
-    <div class="anunciar-footer">
-        <div class="footer-content">
-            <div class="footer-logo">
-                <img src="~/images/autoclick-logo-footer.png" alt="AutoClick.cr" />
-                <div class="social-icons">
-                    <div class="social-icon facebook"></div>
-                    <div class="social-icon instagram"></div>
-                    <div class="social-icon whatsapp"></div>
-                </div>
-            </div>
-            
-            <div class="footer-links">
-                <div class="footer-column">
-                    <h4>AutoClick.cr</h4>
-                    <a href="/contactanos">Contáctenos</a>
-                    <a asp-page="/SobreNosotros">Sobre Nosotros</a>
-                    <a href="/reportar-problema">Reportar un problema</a>
-                </div>
-                <div class="footer-column">
-                    <a href="/TerminosCondiciones">Términos y condiciones</a>
-                    <a href="/PoliticaPrivacidad">Política de privacidad</a>
-                </div>
-                <div class="footer-column">
-                    <h4>Suscribete</h4>
-                    <div class="newsletter">
-                        <input type="email" placeholder="Introducir correo" />
-                        <p>Suscríbase para recibir las últimas noticias y promociones</p>
-                        <button type="button">Suscribirse</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <span>© 2025. Todos los derechos reservados - AutoClick.cr</span>
-        </div>
-    </div>
+    <partial name="_Footer" />
 </div>
