--- a/AutoClick/Pages/Admin/VisitasMensuales.cshtml
+++ b/AutoClick/Pages/Admin/VisitasMensuales.cshtml
@@ -18,134 +18,7 @@
 
 <div style="width: 100%; height: 100vh; position: relative; background: #02081C; overflow: hidden">
     
-    <!-- Sidebar -->
-    <div style="width: 376px; height: 835px; padding-left: 16px; padding-right: 16px; padding-top: 12px; padding-bottom: 12px; left: 0px; top: 80px; position: absolute; background: #030D2B; overflow: hidden; border-right: 0.50px rgba(255, 255, 255, 0.25) solid; flex-direction: column; justify-content: flex-start; align-items: flex-start; display: inline-flex">
-        
-        <!-- Dashboard -->
-        <div data-estado="Default" style="width: 344px; height: 56px; position: relative">
-            <div style="width: 344px; height: 50px; left: 0px; top: 56px; position: absolute; outline: 1px rgba(255, 255, 255, 0.15) solid; outline-offset: -0.50px"></div>
-            <div style="width: 344px; height: 50px; padding-top: 14px; padding-bottom: 14px; padding-left: 16px; left: 0px; top: 3px; position: absolute; overflow: hidden; border-radius: 2px; justify-content: flex-start; align-items: center; gap: 152px; display: inline-flex">
-                <a href="/Admin/Dashboard" style="text-decoration: none; color: white; display: flex; align-items: center; gap: 8px;">
-                    <div style="justify-content: flex-start; align-items: center; gap: 8px; display: flex">
-                        <div style="width: 7.71px; height: 11.57px; outline: 1.23px white solid; outline-offset: -0.61px"></div>
-                        <div style="width: 7.71px; height: 5.14px; outline: 1.23px white solid; outline-offset: -0.61px"></div>
-                        <div style="width: 7.71px; height: 11.57px; outline: 1.23px white solid; outline-offset: -0.61px"></div>
-                        <div style="width: 7.71px; height: 5.14px; outline: 1.23px white solid; outline-offset: -0.61px"></div>
-                        <div style="text-box-trim: trim-both; text-box-edge: cap alphabetic; color: white; font-size: 16px; font-family: Montserrat; font-weight: 500; word-wrap: break-word">Dashboard</div>
-                    </div>
-                </a>
-            </div>
-        </div>
-        
-        <!-- Estadísticas (Desplegado) -->
-        <div data-estado="desplegado" style="width: 344px; padding-top: 3px; padding-bottom: 4px; position: relative; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 8px; display: flex">
-            <div onclick="toggleDropdown('estadisticas')" style="align-self: stretch; height: 50px; padding-top: 14px; padding-bottom: 14px; padding-left: 16px; padding-right: 22px; background: rgba(255, 255, 255, 0.25); overflow: hidden; border-radius: 2px; justify-content: space-between; align-items: center; display: inline-flex; cursor: pointer;">
-                <div style="justify-content: flex-start; align-items: center; gap: 8px; display: flex">
-                    <div style="width: 22px; height: 22px; outline: 1.50px white solid; outline-offset: -0.75px"></div>
-                    <div style="width: 7.19px; height: 7.19px; outline: 1.50px white solid; outline-offset: -0.75px"></div>
-                    <div style="text-box-trim: trim-both; text-box-edge: cap alphabetic; color: white; font-size: 16px; font-family: Montserrat; font-weight: 500; word-wrap: break-word">Estadísticas</div>
-                </div>
-                <div style="width: 12px; height: 6px; background: white; border: 1px rgba(255, 255, 255, 0.25) solid"></div>
-            </div>
-            <div style="align-self: stretch; flex-direction: column; justify-content: flex-start; align-items: flex-start; gap: 4px; display: flex">
-                <div data-property-1="Hover" style="align-self: stretch; height: 40px; padding-top: 8px; padding-bottom: 8px; padding-left: 12px; padding-right: 8px; background: rgba(255, 255, 255, 0.25); border-radius: 4px; justify-content: flex-start; align-items: center; gap: 8px; display: inline-flex">
-                    <a href="/Admin/VisitasMensuales" style="text-decoration: none; color: white;">
-                        <div style="text-box-trim: trim-both; text-box-edge: cap alphabetic; color: white; font-size: 16px; font-family: Montserrat; font-weight: 500; word-wrap: break-word">Visitas mensuales</div>
-                    </a>
-                </div>
-                <div data-property-1="Default" style="align-self: stretch; height: 40px; padding-top: 8px; padding-bottom: 8px; padding-left: 12px; padding-right: 8px; border-radius: 4px; justify-content: flex-start; align-items: center; gap: 8px; display: inline-flex">
-                    <a href="/Admin/IngresosDeLaPlataforma" style="text-decoration: none; color: white;">
-                        <div style="text-box-trim: trim-both; text-box-edge: cap alphabetic; color: white; font-size: 16px; font-family: Montserrat; font-weight: 500; word-wrap: break-word">Ingresos de la plataforma</div>
-                    </a>
-                </div>
-            </div>
-            <div style="width: 344px; height: 133.04px; left: 0px; top: 149px; position: absolute; outline: 1px rgba(255, 255, 255, 0.15) solid; outline-offset: -0.50px"></div>
-        </div>
-        
-        <!-- Gestión de anuncios -->
-        <div data-estado="Default" style="width: 344px; height: 56px; position: relative">
-            <div style="width: 344px; height: 50px; padding-top: 14px; padding-bottom: 14px; padding-left: 16px; padding-right: 22px; left: 0px; top: 3px; position: absolute; overflow: hidden; border-radius: 2px; justify-content: space-between; align-items: center; display: inline-flex">
-                <a href="/Admin/GestionAnuncios" style="text-decoration: none; color: white; display: flex; align-items: center; gap: 8px;">
-                    <div style="justify-content: flex-start; align-items: center; gap: 8px; display: flex">
-                        <div style="width: 3.30px; height: 2.47px; outline: 1.50px white solid; outline-offset: -0.75px"></div>
-                        <div style="width: 3.30px; height: 2.47px; outline: 1.50px white solid; outline-offset: -0.75px"></div>
-                        <div style="width: 22px; height: 22px; outline: 1.50px white solid; outline-offset: -0.75px"></div>
-                        <div style="text-box-trim: trim-both; text-box-edge: cap alphabetic; color: white; font-size: 16px; font-family: Montserrat; font-weight: 500; word-wrap: break-word">Gestión de anuncios</div>
-                    </div>
-                </a>
-                <div style="width: 12px; height: 6px; background: white; border: 1px rgba(255, 255, 255, 0.25) solid"></div>
-            </div>
-            <div style="width: 344px; height: 50px; left: 0px; top: 56px; position: absolute; outline: 1px rgba(255, 255, 255, 0.15) solid; outline-offset: -0.50px"></div>
-        </div>
-        
-        <!-- Publicidad -->
-        <div data-estado="Default" style="width: 344px; height: 56px; position: relative">
-            <div style="width: 344px; height: 50px; padding-top: 14px; padding-bottom: 14px; padding-left: 16px; padding-right: 22px; left: 0px; top: 3px; position: absolute; overflow: hidden; border-radius: 2px; justify-content: flex-start; align-items: center; gap: 152px; display: inline-flex">
-                <a href="/Admin/Publicidad" style="text-decoration: none; color: white; display: flex; align-items: center; gap: 8px;">
-                    <div style="justify-content: flex-start; align-items: center; gap: 8px; display: flex">
-                        <div style="width: 22px; height: 16.72px; background: white"></div>
-                        <div style="text-box-trim: trim-both; text-box-edge: cap alphabetic; color: white; font-size: 16px; font-family: Montserrat; font-weight: 500; word-wrap: break-word">Publicidad</div>
-                    </div>
-                </a>
-            </div>
-            <div style="width: 344px; height: 50px; left: 0px; top: 56px; position: absolute; outline: 1px rgba(255, 255, 255, 0.15) solid; outline-offset: -0.50px"></div>
-        </div>
-        
-        <!-- Solicitudes de fotografía -->
-        <div data-estado="Default" style="width: 344px; height: 56px; position: relative">
-            <div style="width: 344px; height: 50px; padding-top: 14px; padding-bottom: 14px; padding-left: 16px; padding-right: 22px; left: 0px; top: 3px; position: absolute; overflow: hidden; border-radius: 2px; justify-content: flex-start; align-items: center; gap: 152px; display: inline-flex">
-                <a href="/Admin/SolicitudesFotografia" style="text-decoration: none; color: white; display: flex; align-items: center; gap: 8px;">
-                    <div style="justify-content: flex-start; align-items: center; gap: 8px; display: flex">
-                        <div style="width: 22px; height: 16.79px; background: white"></div>
-                        <div style="text-box-trim: trim-both; text-box-edge: cap alphabetic; color: white; font-size: 16px; font-family: Montserrat; font-weight: 500; word-wrap: break-word">Solicitudes de fotografía</div>
-                    </div>
-                </a>
-            </div>
-            <div style="width: 344px; height: 50px; left: 0px; top: 56px; position: absolute; outline: 1px rgba(255, 255, 255, 0.15) solid; outline-offset: -0.50px"></div>
-        </div>
-        
-        <!-- Reportes del sistema -->
-        <div data-estado="Default" style="width: 344px; height: 56px; position: relative">
-            <div style="width: 344px; height: 50px; padding-top: 14px; padding-bottom: 14px; padding-left: 16px; padding-right: 22px; left: 0px; top: 3px; position: absolute; overflow: hidden; border-radius: 2px; justify-content: space-between; align-items: center; display: inline-flex">
-                <a href="/Admin/Reportes" style="text-decoration: none; color: white; display: flex; align-items: center; gap: 8px;">
-                    <div style="justify-content: flex-start; align-items: center; gap: 8px; display: flex">
-                        <div style="width: 22px; height: 22.01px; background: white"></div>
-                        <div style="text-box-trim: trim-both; text-box-edge: cap alphabetic; color: white; font-size: 16px; font-family: Montserrat; font-weight: 500; word-wrap: break-word">Reportes del sistema</div>
-                    </div>
-                </a>
-                <div style="width: 12px; height: 6px; background: white; border: 1px rgba(255, 255, 255, 0.25) solid"></div>
-            </div>
-            <div style="width: 344px; height: 50px; left: 0px; top: 56px; position: absolute; outline: 1px rgba(255, 255, 255, 0.15) solid; outline-offset: -0.50px"></div>
-        </div>
-        
-        <!-- Centro de soporte -->
-        <div data-estado="Default" style="width: 344px; height: 56px; position: relative">
-            <div style="width: 344px; height: 50px; padding-top: 14px; padding-bottom: 14px; padding-left: 16px; padding-right: 22px; left: 0px; top: 3px; position: absolute; overflow: hidden; border-radius: 2px; justify-content: space-between; align-items: center; display: inline-flex">
-                <a href="/Admin/CentroDeSoporte" style="text-decoration: none; color: white; display: flex; align-items: center; gap: 8px;">
-                    <div style="justify-content: flex-start; align-items: center; gap: 8px; display: flex">
-                        <div style="width: 22px; height: 22px; background: white"></div>
-                        <div style="text-box-trim: trim-both; text-box-edge: cap alphabetic; color: white; font-size: 16px; font-family: Montserrat; font-weight: 500; word-wrap: break-word">Centro de soporte</div>
-                    </div>
-                </a>
-                <div style="width: 12px; height: 6px; background: white; border: 1px rgba(255, 255, 255, 0.25) solid"></div>
-            </div>
-            <div style="width: 344px; height: 50px; left: 0px; top: 56px; position: absolute; outline: 1px rgba(255, 255, 255, 0.15) solid; outline-offset: -0.50px"></div>
-        </div>
-        
-        <!-- Control de la plataforma -->
-        <div data-estado="Default" style="width: 344px; height: 56px; position: relative">
-            <div style="width: 344px; height: 50px; padding-top: 14px; padding-bottom: 14px; padding-left: 16px; padding-right: 22px; left: 0px; top: 3px; position: absolute; overflow: hidden; border-radius: 2px; justify-content: space-between; align-items: center; display: inline-flex">
-                <a href="/Admin/ControlPlataforma" style="text-decoration: none; color: white; display: flex; align-items: center; gap: 8px;">
-                    <div style="justify-content: flex-start; align-items: center; gap: 8px; display: flex">
-                        <div style="width: 22px; height: 22px; background: white"></div>
-                        <div style="text-box-trim: trim-both; text-box-edge: cap alphabetic; color: white; font-size: 16px; font-family: Montserrat; font-weight: 500; word-wrap: break-word">Control de la plataforma</div>
-                    </div>
-                </a>
-                <div style="width: 12px; height: 6px; background: white; border: 1px rgba(255, 255, 255, 0.25) solid"></div>
-            </div>
-            <div style="width: 344px; height: 50px; left: 0px; top: 56px; position: absolute; outline: 1px rgba(255, 255, 255, 0.15) solid; outline-offset: -0.50px"></div>
-        </div>
-    </div>
+    @await Html.PartialAsync("_AdminSidebar")
     
     <!-- Título Tráfico -->
     <div style="padding-top: 16px; padding-bottom: 16px; padding-right: 16px; left: 396px; top: 112px; position: absolute; justify-content: flex-start; align-items: center; display: inline-flex">
@@ -349,9 +222,3 @@
     </div>
 </div>
 
-<script>
-function toggleDropdown(dropdownId) {
-    // Funcionalidad del dropdown si se necesita
-    console.log('Dropdown toggle for:', dropdownId);
-}
-</script>
